--- a/languages/cpp_libraries/cpp_libraries/en/playlists/c.txt
+++ b/languages/cpp_libraries/cpp_libraries/en/playlists/c.txt
@@ -2,3 +2,7 @@
 abseil-cpp=>abseil/abseil-cpp
 Apache C++ Standard Library=>http://stdcxx.apache.org/
 APR=>http://apr.apache.org/
+
+##Compression
+bit7z=>rikyoz/bit7z
+Brotli=>google/brotli
