--- a/languages/c_libraries/c_libraries/en/playlists.txt
+++ b/languages/c_libraries/c_libraries/en/playlists.txt
@@ -1,5 +1,5 @@
 @@@Native
-##C Libraries-->c_libraries
+##C++ Libraries-->cpp_libraries
 ##Rust Libraries-->rust_libraries
 ##Go Libraries-->go_libraries
 
