--- a/languages/swift/swift_v.txt
+++ b/languages/swift/swift_v.txt
@@ -1,4 +1,4 @@
 ##Welcome to Swift
 About Swift=>https://docs.google.com/uc?export=download&id=1jhdoa60Pe8ZYR3TWXlYT_J9pENYxkZGS_free
-Version Compatibility=>compatibility
+Version Compatibility=>https://docs.google.com/uc?export=download&id=1jhdoa60Pe8ZYR3TWXlYT_J9pENYxkZGS
 A Swift Tour=>guidedtour
