--- a/languages/julia/playlists/p.txt
+++ b/languages/julia/playlists/p.txt
@@ -6,6 +6,6 @@
 
 @@@Libraries
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries.txt
-##C Libraries--https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
+##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries.txt
 
