--- a/languages/cherrypy/playlists/p.txt
+++ b/languages/cherrypy/playlists/p.txt
@@ -6,3 +6,5 @@
 
 @@@NodeJS Frameworks
 ##ExpressJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/expressjs/expressjs.txt
+
+{{LANGUAGES:id-->cherrypy;Spanish-->es;French-->fr;Portuguese-->pt;German-->de}}
