--- a/languages/cherrypy/cherrypy__es.txt
+++ b/languages/cherrypy/cherrypy__es.txt
@@ -1,7 +1,7 @@
-##Introduction
-Introduction=>https://apps.camposha.info/wp-content/uploads/md/python/frameworks/cherrypy/es/intro
+##¿Por qué CherryPy?
+¿Por qué CherryPy?=>https://apps.camposha.info/wp-content/uploads/md/python/frameworks/cherrypy/es/intro
 
-##Support and Enterprise
-Support=>https://apps.camposha.info/wp-content/uploads/md/python/frameworks/cherrypy/en/support
+##Soporte
+Soporte=>https://apps.camposha.info/wp-content/uploads/md/python/frameworks/cherrypy/en/support
 
 
