--- a/languages/python_libraries/playlists/p.txt
+++ b/languages/python_libraries/playlists/p.txt
@@ -1,1 +1,3 @@
-@@@Learn Web Development
+@@@Python Web Development
+##Flask Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/flask/flask.txt
+##Cherrypy Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cherrypy/cherrypy.txt
