--- a/languages/python_libraries/playlists/p.txt
+++ b/languages/python_libraries/playlists/p.txt
@@ -1,3 +1,6 @@
 @@@Python Web Development
 ##Flask Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/flask/flask.txt
 ##Cherrypy Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cherrypy/cherrypy.txt
+
+@@@Concurrency in Python
+##Asyncio Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/python_libraries/asyncio.txt
